--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div> *@
 
-<table id="example" class="cell-border">
+<table id="tableMain" class="cell-border">
 	<thead>
 		<tr>
 			<th>Seq</th>
@@ -60,7 +60,16 @@
 			<td></td>
 			<td></td>
 			<td></td>
-			<td><button class="btn btn-sm btn-outline-dark my-2 my-sm-0">Edit</button></td>
+			<td>
+				<span class="button button-secondary">
+					<span class="button-text">Edit</span>
+					<span class="button-icon">
+						<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21" fill="none">
+							<path d="M3.2478 18.1001V14.5584L14.2478 3.57926C14.4145 3.42649 14.5986 3.30843 14.8003 3.2251C15.002 3.14176 15.2136 3.1001 15.4353 3.1001C15.657 3.1001 15.8722 3.14176 16.0811 3.2251C16.29 3.30843 16.4706 3.43343 16.6228 3.6001L17.7686 4.76676C17.9353 4.91954 18.057 5.1001 18.1336 5.30843C18.2103 5.51676 18.2484 5.7251 18.2478 5.93343C18.2478 6.15565 18.2097 6.3676 18.1336 6.56926C18.0575 6.77093 17.9359 6.95482 17.7686 7.12093L6.78947 18.1001H3.2478ZM15.4145 7.1001L16.5811 5.93343L15.4145 4.76676L14.2478 5.93343L15.4145 7.1001Z" fill="black" />
+						</svg>
+					</span>
+				</span>
+			</td>
 		</tr>
 		<tr>
 			<td></td>
