--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,11 @@
                     <img src="~/images/icons/menu.svg">
                 </a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PQCI</a>
-                <input type="text" id="myInputTextField" placeholder="Search Application">
+
+                <div class="header-search">
+                    <input class="header-search-input" type="text" id=" myInputTextField" placeholder="Search Application">
+                </div>
+                
 
                @*  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -35,8 +39,14 @@
                     </ul> *@
                 </div>
 
-
-                    <a class="btn btn-sm btn-outline-dark my-2 my-sm-0" href="/Add">Add New</a>
+                <span class="button button-primary">
+                    <span class="button-text">Add New</span>
+                    <span class="button-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                            <path d="M6.85714 9.14286H0V6.85714H6.85714V0H9.14286V6.85714H16V9.14286H9.14286V16H6.85714V9.14286Z" fill="white" />
+                        </svg>
+                    </span>
+                </span>
         
             </div>
         </nav>
