--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,36 +18,54 @@
                     <img src="~/images/icons/menu.svg">
                 </a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PQCI</a>
+                @{
+                    if (ViewData["Title"] == "Home Page")
+                    {
+                        <div class="header-search" style="margin-right: 24px;">
+                            <input class="header-search-input" type="text" id="header-search-input" placeholder="Search Application">
+                        </div>
+                    }
+                    else if (ViewData["Title"] == "Add New Application / System / Device")
+                    {
+                        <div class="header-title">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                <path d="M6.85727 9.14286H0.00012207V6.85714H6.85727V0H9.14298V6.85714H16.0001V9.14286H9.14298V16H6.85727V9.14286Z" fill="black" />
+                            </svg>
+                            Add New Application / System / Device
+                        </div>
+                    }
+                }
 
-                <div class="header-search">
-                    <input class="header-search-input" type="text" id=" myInputTextField" placeholder="Search Application">
-                </div>
-                
 
-               @*  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                @*  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
                 </button> *@
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                @* <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between"> *@
                     @* <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                    <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </li>
                     </ul> *@
-                </div>
+                @* </div> *@
+                @{
+                    if (ViewData["Title"] == "Home Page")
+                    {
+                        <span class="button button-primary">
+                            <span class="button-text" onclick="goToAdd()">Add New</span>
+                            <span class="button-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                    <path d="M6.85714 9.14286H0V6.85714H6.85714V0H9.14286V6.85714H16V9.14286H9.14286V16H6.85714V9.14286Z" fill="white" />
+                                </svg>
+                            </span>
+                        </span>
+                    }
+                }
 
-                <span class="button button-primary">
-                    <span class="button-text">Add New</span>
-                    <span class="button-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                            <path d="M6.85714 9.14286H0V6.85714H6.85714V0H9.14286V6.85714H16V9.14286H9.14286V16H6.85714V9.14286Z" fill="white" />
-                        </svg>
-                    </span>
-                </span>
-        
+
             </div>
         </nav>
     </header>
@@ -85,6 +103,7 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/dataTables/dataTables.min.js"></script>
     <script src="~/lib/dataTables/fixedColumns/dataTables.fixedColumns.min.js"></script>
