--- a/Views/Add/Index.cshtml
+++ b/Views/Add/Index.cshtml
@@ -273,7 +273,7 @@
                                             </svg>
                                         </span>
                                     </button>
-                                    <button type="button" class="button button-primary" onclick>
+                                    <button type="button" class="button button-primary" onclick="saveCat1()">
                                         <span class="button-text">Save</span>
                                         <span class="button-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -383,7 +383,7 @@
                                         </svg>
                                     </span>
                                 </button>
-                                <button type="button" class="button button-primary">
+                                <button type="button" class="button button-primary" onclick="saveCat2">
                                     <span class="button-text">Save</span>
                                     <span class="button-icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -485,7 +485,7 @@
                                         </svg>
                                     </span>
                                 </button>
-                                <button type="button" class="button button-primary">
+                                <button type="button" class="button button-primary" onclick="saveCat3">
                                     <span class="button-text">Save</span>
                                     <span class="button-icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -582,7 +582,7 @@
                                         </svg>
                                     </span>
                                 </button>
-                                <button type="button" class="button button-primary">
+                                <button type="button" class="button button-primary" onclick="saveCat4">
                                     <span class="button-text">Save</span>
                                     <span class="button-icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
