--- a/Views/Add/Index.cshtml
+++ b/Views/Add/Index.cshtml
@@ -210,20 +210,20 @@
                                     </label>
                                     <div class="form-group-radio">
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioCritical" id="radioCritical1">
-                                            <label class="form-check-label" for="radioCritical1">
+                                            <input class="form-check-input" type="radio" name="radioc1Use" id="radioc1Use1" required>
+                                            <label class="form-check-label" for="radioc1Use1">
                                                 Encryption
                                             </label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioCritical" id="radioCritical2">
-                                            <label class="form-check-label" for="radioCritical2">
+                                            <input class="form-check-input" type="radio" name="radioc1Use" id="radioc1Use2" required>
+                                            <label class="form-check-label" for="radioc1Use2">
                                                 Message Authentication
                                             </label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioCritical" id="radioCritical3">
-                                            <label class="form-check-label" for="radioCritical3">
+                                            <input class="form-check-input" type="radio" name="radioc1Use" id="radioc1Use3" required>
+                                            <label class="form-check-label" for="radioc1Use3">
                                                 Others
                                             </label>
                                         </div>
@@ -234,8 +234,9 @@
                                     <label class="form-text-label">
                                         Modes
                                     </label>
-                                    <select class="form-select" name="inputName">
-                                        <option>Select</option>
+                                    <select class="form-select" name="selectC1Modes">
+                                        <option value="">Select</option>
+                                        <option value="1">1</option>
                                     </select>
                                 </div>
 
@@ -245,20 +246,20 @@
                                     </label>
                                     <div class="form-group-radio">
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioCritical" id="radioCritical1">
-                                            <label class="form-check-label" for="radioCritical1">
+                                            <input class="form-check-input" type="radio" name="radioC1KeyLength" id="radioC1KeyLength1">
+                                            <label class="form-check-label" for="radioC1KeyLength1">
                                                 128 bit
                                             </label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioCritical" id="radioCritical2">
-                                            <label class="form-check-label" for="radioCritical2">
+                                            <input class="form-check-input" type="radio" name="radioC1KeyLength" id="radioC1KeyLength2">
+                                            <label class="form-check-label" for="radioC1KeyLength2">
                                                 256 bit
                                             </label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="radioCritical" id="radioCritical3">
-                                            <label class="form-check-label" for="radioCritical3">
+                                            <input class="form-check-input" type="radio" name="radioC1KeyLength" id="radioC1KeyLength3">
+                                            <label class="form-check-label" for="radioC1KeyLength3">
                                                 Others
                                             </label>
                                         </div>
@@ -383,7 +384,7 @@
                                         </svg>
                                     </span>
                                 </button>
-                                <button type="button" class="button button-primary" onclick="saveCat2">
+                                <button type="button" class="button button-primary" onclick="saveCat2()">
                                     <span class="button-text">Save</span>
                                     <span class="button-icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -485,7 +486,7 @@
                                         </svg>
                                     </span>
                                 </button>
-                                <button type="button" class="button button-primary" onclick="saveCat3">
+                                <button type="button" class="button button-primary" onclick="saveCat3()">
                                     <span class="button-text">Save</span>
                                     <span class="button-icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -582,7 +583,7 @@
                                         </svg>
                                     </span>
                                 </button>
-                                <button type="button" class="button button-primary" onclick="saveCat4">
+                                <button type="button" class="button button-primary" onclick="saveCat4()">
                                     <span class="button-text">Save</span>
                                     <span class="button-icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
