--- a/Views/Add/Index.cshtml
+++ b/Views/Add/Index.cshtml
@@ -39,6 +39,7 @@
                             <label class="form-check-label" for="radioOwner2">
                                 IT Division
                             </label>
+                            <input class="radioOwnerRemarks" type="text" name="radioOwnerRemarks" placeholder="Please Specify" required style="display:none;">
                         </div>
                     </div>
                 </div>
